<resources>
    <string name="app_name">FactorioProductionPlanner</string>
    <string name="myProductionLinesTextView">My Production Lines</string>
    <string name="viewRecipeListButton">Browse recipe list</string>
    <string name="viewRecipesTextView">Recipe list</string>
    <string name="backButton">Back</string>
    <string name="transport_belt">Transport belt</string>
    <string name="inserter">Inserter</string>
    <string name="pipe">Pipe</string>
    <string name="rail">Rail</string>
    <string name="productivity_module_1">Productivity module 1</string>
    <string name="iron_plate">Iron plate</string>
    <string name="copper_plate">Copper plate</string>
    <string name="solid_fuel">Solid fuel</string>
    <string name="steel_plate">Steel plate</string>
    <string name="plastic_bar">Plastic bar</string>
    <string name="sulphur">Sulphur</string>
    <string name="battery">Battery</string>
    <string name="explosives">Explosives</string>
    <string name="copper_cable">Copper cable</string>
    <string name="iron_stick">Iron stick</string>
    <string name="iron_gear">Iron gear</string>
    <string name="electronic_circuit">Electronic circuit</string>
    <string name="advanced_circuit">Advanced circuit</string>
    <string name="processing_unit">Processing unit</string>
    <string name="engine_unit">Engine unit</string>
    <string name="electric_engine_unit">Electric engine unit</string>
    <string name="flying_robot_frame">Flying robot frame</string>
    <string name="rocket_control_unit">Rocket control unit</string>
    <string name="low_density_structure">Low density structure</string>
    <string name="rocket_fuel">Rocket fuel</string>
    <string name="automation_science_pack">Automation science pack</string>
    <string name="logistic_science_pack">Logistic science pack</string>
    <string name="chemical_science_pack">Chemical science pack</string>
    <string name="production_science_pack">Production science pack</string>
    <string name="utility_science_pack">Utility science pack</string>
    <string name="save_recipe">Save recipe</string>
    <string name="edit_settings">Production settings</string>
</resources>