<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    tools:context=".ViewAllRecipesActivity">

    <TextView
        android:id="@+id/viewRecipesTextView"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_weight="0"
        android:text="@string/viewRecipesTextView"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHighlight="@color/teal_700"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:onClick="onBackButtonClick"
        android:text="@string/backButton"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewRecipesTextView" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipesTextView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/scrollerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/ybeltButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/transport_belt" />

            <Button
                android:id="@+id/inserterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/inserter" />

            <Button
                android:id="@+id/pipeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/pipe" />

            <Button
                android:id="@+id/railButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/flying_robot_frame" />

            <Button
                android:id="@+id/prod1Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/productivity_module_1" />

            <Button
                android:id="@+id/ironplateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/iron_plate" />

            <Button
                android:id="@+id/copplateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/copper_plate" />

            <Button
                android:id="@+id/solidfuelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/solid_fuel" />

            <Button
                android:id="@+id/steelplateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/steel_plate" />

            <Button
                android:id="@+id/plasticButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/plastic_bar" />

            <Button
                android:id="@+id/sulphurButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/sulphur" />

            <Button
                android:id="@+id/batteryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/battery" />

            <Button
                android:id="@+id/explosivesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/explosives" />

            <Button
                android:id="@+id/copcableButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/copper_cable"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/ironstickButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/iron_stick" />

            <Button
                android:id="@+id/irongearButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/iron_gear" />

            <Button
                android:id="@+id/grncircuitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/electronic_circuit" />

            <Button
                android:id="@+id/redcircuitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/advanced_circuit" />

            <Button
                android:id="@+id/bluecircuitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/processing_unit" />

            <Button
                android:id="@+id/engineunitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/engine_unit" />

            <Button
                android:id="@+id/elecengineButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/electric_engine_unit" />

            <Button
                android:id="@+id/flyingrobotButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/flying_robot_frame" />

            <Button
                android:id="@+id/rcuButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/rocket_control_unit" />

            <Button
                android:id="@+id/ldstructButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/low_density_structure" />

            <Button
                android:id="@+id/rocketfuelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/rocket_fuel" />

            <Button
                android:id="@+id/redsciButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/automation_science_pack" />

            <Button
                android:id="@+id/grnsciButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/logistic_science_pack" />

            <Button
                android:id="@+id/blusciButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/chemical_science_pack" />

            <Button
                android:id="@+id/prpsciButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/production_science_pack" />

            <Button
                android:id="@+id/yelsciButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRecipeButtonClick"
                android:text="@string/utility_science_pack" />

            <Button
                android:id="@+id/bufferButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>