...
        android:text="@string/save_recipe"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:tooltipText="Save recipe with current settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/settingsButton"
        app:layout_constraintTop_toTopOf="@+id/settingsButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
